# peekorobo

./: .env  .gitattributes  .gitignore  .python-version  CUTOVER.md  DEPLOYMENT.md  LICENSE  Procfile  README.md  api.py  auth.py  check_migration_status.py  clear_and_migrate.py  create_data.py  data_store.py  datagather.py  eventcodes.py  fetchevents.py  fetchteams.py  frcgames.py  layouts.py  locations.py  migrate_events_only.py  openapi.json  peekorobo.py  plot.py  requirements.txt  run_combined.py  user_data.sqlite  utils.py  wcp.py
.ipynb_checkpoints/: LICENSE-checkpoint  README-checkpoint.md  frc-checkpoint.py  frcgames-checkpoint.py  geocode-checkpoint.py  peekorobo-checkpoint.py  requirements-checkpoint.txt  teams_2009_section_0-checkpoint.json  test-checkpoint.py
assets/: custom.css
peekorobo-api/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  render.yaml  requirements.txt  security.py
peekorobo-api/data/: data_helpers.py  db.py
peekorobo-api/data/models/: event_awards.py  event_insights.py  event_matches.py  event_perfs.py  event_rankings.py  event_teams.py  events.py  favorites.py  frc_games.py  insights_overview.py  map.py  notables.py  season_summary.py  team_awards.py  team_epas.py  team_events.py  teams.py  users.py
peekorobo-api/query/: auth.py  event_awards.py  event_insights.py  event_keys.py  event_matches.py  event_perfs.py  event_rankings.py  event_teams.py  events.py  favorites.py  frc_games.py  insights_overview.py  map.py  notables.py  season_summary.py  team_awards.py  team_epas.py  team_events.py  teams.py
(+249 files in other folders)
